fix CRAN 1 review requirements

--- a/suwo_testing.ipynb
+++ b/suwo_testing.ipynb
@@ -131,7 +131,7 @@
             "Please cite 'suwo' as: \n",
             "\n",
             "\n",
-            "Araya-Salas, M., & J. Elizondo-Calvo. 2023. suwo: access nature media repositories through R. R package version 0.1.0.\n",
+            "Araya-Salas, M., & J. Elizondo-Calvo. 2023. suwo: access nature media repositories. R package version 0.1.0.\n",
             "\n"
           ]
         }
