--- a/vignettes/suwo.Rmd
+++ b/vignettes/suwo.Rmd
@@ -432,7 +432,7 @@ The code above examplifies the most common use of query functions, which applies
 
 ### Interactive retrieval of metadata
 
-[query_macaulay()](https://marce10.github.io/suwo/reference/query_macaulay.html) is the only interactive function. This means that when users run a query the function opens a browser window to the [Macaulay Library's search page](https://search.macaulaylibrary.org/catalog), where the users must download a .csv file with the metadata. Here is a example of a query for strip-throated hermit (_Phaethornis striigularis_) videos:
+[query_macaulay()](https://marce10.github.io/suwo/reference/query_macaulay.html) is the only interactive function.  This means that when users run a query the function opens a browser window to the [Macaulay Library's search page](https://search.macaulaylibrary.org/catalog), where the users must download a .csv file with the metadata. Here is a example of a query for strip-throated hermit (_Phaethornis striigularis_) videos:
 
 ```{r, eval = FALSE}
 p_striigularis <- query_macaulay(species = "Phaethornis striigularis", 
@@ -445,9 +445,20 @@ Users must click on the "Export" button to save the .csv file with the metadata:
 
 </br>
 
+
+Note that for bird species the species name must be valid according to the Macaulay Library taxonomy (which follows the Clements checklist). For non-bird species users must use the argument `taxon_code`. The species taxon code can be found by running a search at the [Macaulay Library's search page](https://search.macaulaylibrary.org/catalog) and checking the URL of the species page. For instance, the taxon code for jaguar (_Panthera onca_) is "t-11032765":
+
+<center><img src="ml_taxon_code.png" alt="Macaulay library taxon code" width="100%"></center>
+
+Once you have the taxon code, you can run the query as follows:
+```{r, eval = FALSE}
+jaguar <- query_macaulay(taxon_code =  "t-11032765", 
+                                 format = "video")
+```
+
 Here are some tips for using this function properly:
 
-* Valid bird species names can be checked at `suwo:::ml_taxon_code$SCI_NAME` (see 'Querying non-bird species' section below for other groups)
+* Valid bird species names can be checked at `suwo:::ml_taxon_code$SCI_NAME`
 * The exported csv file must be saved in the directory specified by the argument `path` of the function (default is the current working directory)
 * If the file is saved overwriting a pre-existing file (i.e. same file name) the function will not detect it
 * The function will not proceed until the file is saved 
@@ -484,9 +495,7 @@ Users can check at the Macaulay Library website how many records are available f
 
 <center><img src="ml_num_recs.jpeg" alt="Checking number of records at Macaulay Library" width="100%"></center>
 
-### Querying non-bird species 
-
-[query_macaulay()](https://marce10.github.io/suwo/reference/query_macaulay.html) can only search for bird species. However, the Macaulay Library hosts media files for other taxonomic groups as well (e.g., mammals, amphibians, insects). To obtain metadata for these other groups (e.g., mammals, amphibians, insects) users must manually search for the species at the [Macaulay Library website](https://www.macaulaylibrary.org/), download the .csv file with the metadata, and then provide 1) the name of the csv file(s) to the argument `files` and 2) the directory path were it was saved to the argument `path`.
+[query_macaulay()](https://marce10.github.io/suwo/reference/query_macaulay.html) can also read metadata previously downloaded from [Macaulay Library website](https://www.macaulaylibrary.org/). To do this, users must provide 1) the name of the csv file(s) to the argument `files` and 2) the directory path were it was saved to the argument `path`.
 
 ## query_xenocanto()
 
